not much progress, about to fix the ordered list tags

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <body>
   <div class= "banner">
     <p>Iron Yard News</p>
-    <ol> new</ol>
+    <p> new </p>
     <ol> comments</ol>
     <ol> show</ol>
     <ol> ask</ol>
     <ol> jobs</ol>
     <ol> submit</ol>
-
+    <ol> login</ol>
   <!--The code below tells the html file to connect to the main.css file.-->
   <link rel = "stylesheet" href="main.css">
   </body>
