--- a/index.html
+++ b/index.html
@@ -4,16 +4,24 @@
     <meta charset="utf-8">
     <title>The Iron Yard News homework assignment</title>
   </head>
+<!-- BODY BEGINS HERE -->
   <body>
-  <div class= "banner">
+    <header>
+
+  <div class= "container">
     <p>Iron Yard News</p>
-    <p> new </p>
-    <ol> comments</ol>
-    <ol> show</ol>
-    <ol> ask</ol>
-    <ol> jobs</ol>
-    <ol> submit</ol>
-    <ol> login</ol>
+    <div>
+    <ul>
+    <li class="nav items"> new </li>
+    <li class="nav items"> comments</li>
+    <li class="nav items"> show</li>
+    <li class="nav items"> ask</li>
+    <li class="nav items"> jobs</li>
+    <li class="nav items"> submit</li>
+    <li class="nav items"> login</li>
+  </ul>
+</div>
+
   <!--The code below tells the html file to connect to the main.css file.-->
   <link rel = "stylesheet" href="main.css">
   </body>
