finally created white vertical dividers between navbar items - next goal: align the login link to the right

--- a/index.html
+++ b/index.html
@@ -2,27 +2,33 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <!--The code below tells the html file to connect to the main.css file.-->
+    <link rel = "stylesheet" href="main.css">
     <title>The Iron Yard News homework assignment</title>
   </head>
+
 <!-- BODY BEGINS HERE -->
+
   <body>
     <header>
 
   <div class= "container">
     <p>Iron Yard News</p>
-    <div>
-    <ul>
-    <li class="nav items"> new </li>
-    <li class="nav items"> comments</li>
-    <li class="nav items"> show</li>
-    <li class="nav items"> ask</li>
-    <li class="nav items"> jobs</li>
-    <li class="nav items"> submit</li>
-    <li class="nav items"> login</li>
-  </ul>
-</div>
+      <nav>
+        <ul>
+            <li class="nav-items">new</li>
+            <li class="nav-items"> comments</li>
+            <li class="nav-items"> show</li>
+            <li class="nav-items"> ask</li>
+            <li class="nav-items"> jobs</li>
+            <li class="nav-items"> submit</li>
+            <li class="nav-items"> login</li>
+        </ul>
+    </nav>
+  </div>
+ </header>
 
-  <!--The code below tells the html file to connect to the main.css file.-->
-  <link rel = "stylesheet" href="main.css">
+
+
   </body>
 </html>
