feel like the only real progress I've made is memorizing the git commands and making my code easier to red.  SIGH

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <header>
 
   <div class= "container">
-    <p>Iron Yard News</p>
+    <ul>
+      <!-- FIX THIS !!<li Iron Yard News</ul> -->
       <nav>
         <ul>
             <li class="nav-items">new</li>
@@ -22,7 +23,12 @@
             <li class="nav-items"> ask</li>
             <li class="nav-items"> jobs</li>
             <li class="nav-items"> submit</li>
-            <li class="nav-items"> login</li>
+        </ul>
+        <ul>
+            <li class="login-link"> login</li>
+        </ul>
+            <!-- Why is a bullet showing up next to the login link? -->
+            <!-- Why isn't the login link INSIDE the grey container? -->
         </ul>
     </nav>
   </div>
