I wasn't able to make much further progress on the finished product.  Still wondering if the list item tag is the best way to go for all of the header items.  The bullet points are frustrating and I never got past them. I spent time this evening copying some of my handwritten notes into stickies.app, which seemed to solidify some points.  Tomorrow is another opportunity for progress!  : )

--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
   </head>
 
 <!-- BODY BEGINS HERE -->
-
   <body>
     <header>
 
   <div class= "container">
+    <!-- SHOULD Capital-I and IYN-title be list items (below)?? That seems to force them to become bullet points -->
     <ul>
-      <!-- FIX THIS !!<li Iron Yard News</ul> -->
+      <li id="Capital-I">I</li>
+      <li id="IYN-title">Iron Yard News</li>
+    </ul>
       <nav>
         <ul>
             <li class="nav-items">new</li>
@@ -24,12 +26,13 @@
             <li class="nav-items"> jobs</li>
             <li class="nav-items"> submit</li>
         </ul>
+
         <ul>
             <li class="login-link"> login</li>
         </ul>
             <!-- Why is a bullet showing up next to the login link? -->
             <!-- Why isn't the login link INSIDE the grey container? -->
-        </ul>
+        <!-- </ul> -->
     </nav>
   </div>
  </header>
